# CSnake

./: .gitignore  CMakeLists.txt  Makefile  README.md  rewind_to_initial.sh
src/: common-def.h  queue.c  queue.h  snake.c  snake.h  tui.c  tui.h
